--- a/page2.html
+++ b/page2.html
@@ -68,7 +68,7 @@
           <p><li>It takes one week to be delivered to your door </li></p>
           <p><li>Tax is excluded from the price </li></p>
         </h4>
-        <a href="fresh.html" class="btn btn-lg btn-primary">Back to List</i></a>
+        <a href="Fresh.html" class="btn btn-lg btn-primary">Back to List</i></a>
       </div>
       <div class="col-md-2 subdetail">
         <a href="#" class="btn btn-lg btn-success">Add to Cart <i class="fa fa-shopping-cart"></i></a>
