--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><a href="Fresh.html">Fresh</a></li>
               <li><a href="Happiness.html">Happiness</a></li>
-              <li><a href="Beauty.html">Beauty</a></li>
+              <li><a href="beauty.html">Beauty</a></li>
             </ul>
           </li>
         </ul>
